--- a/paas/jobmanager-session-deployment-non-ha.yaml
+++ b/paas/jobmanager-session-deployment-non-ha.yaml
@@ -14,6 +14,9 @@ spec:
         app: flink
         component: jobmanager
     spec:
+      serviceAccountName: flink-sa
+      imagePullSecrets:
+        - name: image-registry-pull
       containers:
         - name: jobmanager
           image: registry.paas.psnc.pl/ecloud-poc/flink-rich-node-poc:latest
@@ -44,8 +47,8 @@ spec:
               mountPath: /working-directory
             - name: dumps
               mountPath: /dumps
-            - name: checkpoints
-              mountPath: /data/flink/checkpoints
+            - name: flink-data
+              mountPath: /data/flink
           resources:
             limits:
               cpu: "2"
@@ -73,9 +76,9 @@ spec:
         - name: working-directory
           persistentVolumeClaim:
             claimName: job-manager-work
-        - name: checkpoints
+        - name: flink-data
           persistentVolumeClaim:
-            claimName: job-manager-checkpoints
+            claimName: flink-data
         - name: web-upload
           persistentVolumeClaim:
             claimName: web-upload
