--- a/paas/taskmanager-session-deployment.yaml
+++ b/paas/taskmanager-session-deployment.yaml
@@ -34,8 +34,8 @@ spec:
               mountPath: /opt/flink/log
             - name: dumps
               mountPath: /dumps
-            - name: checkpoints
-              mountPath: /data/flink/checkpoints
+            - name: flink-data
+              mountPath: /data/flink
           resources:
             limits:
               cpu: "2"
@@ -55,9 +55,9 @@ spec:
                 path: log4j-console.properties
         - emptyDir: { }
           name: log-volume
-        - name: checkpoints
+        - name: flink-data
           persistentVolumeClaim:
-            claimName: job-manager-checkpoints
+            claimName: flink-data
         - emptyDir: { }
           name: conf-volume
         - name: dumps
